--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 /*
 //===================================================================================================
-// File: login.php
+// File: index.html
 // Description: This file is the login page of our website.
 //===================================================================================================
 */
@@ -34,7 +34,7 @@
 
 <body class="body">
   <nav class="navbar navbar-dark bg-dark">
-    <a id="navbarHeader" class="navbar-brand" href="#"><img src="assets/logo.png" width="30" height="30" class="d-inline-block align-top" alt=""> Sriscloud </a>
+    <a id="navbarHeader" class="navbar-brand" href="#"><img src="sriscloud.png" width="30" height="30" class="d-inline-block align-top" alt=""> Sriscloud </a>
   </nav>
   <div class="container">
     <div class="card" id="wrapper">
